--- a/pr-preview/pr-209/docs-generator/navigation/group/nested-page-1.html
+++ b/pr-preview/pr-209/docs-generator/navigation/group/nested-page-1.html
@@ -6,9 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Nested Page 1 - FK Documentation generator</title><link
             rel="stylesheet"
-            href="../../assets/docs-572a04.css"
+            href="../../assets/docs-a3d210.css"
             crossorigin
-            integrity="sha384-Pwd5Ernh2cekVRAFkaa2rc9iAY2IlMP6aE12LQ+Wb1pAx9RR0vZfEUhnoJPMP8Tv"
+            integrity="sha384-YbeF7RcFfGT342qcvru++XOg5V9/m3n53O1UMUT6BqaCOYuVEdkVXEI5GuF6zTsy"
             
         />
         <link
@@ -221,9 +221,9 @@
 </div>
 <div class="toolbar__item">
     <span class="version">
-        feature/translate-docs (<a href="https://github.com/Forsakringskassan/docs-generator/commits/5620a01ce6d2f0707ba3c2cfcdb1a3a8649d0917">5620a01</a>)<br />
+        feature/translate-docs (<a href="https://github.com/Forsakringskassan/docs-generator/commits/525b7be8cc8df7e76151640a3b9718a51ebc04ba">525b7be</a>)<br />
         <a href="https://github.com/Forsakringskassan/docs-generator/pull/209">PR 209</a><br />
-        2025-04-20 10:38
+        2025-04-20 14:38
     </span>
 </div>
 </div>
