--- a/pr-preview/pr-209/docs-generator/theme/index.html
+++ b/pr-preview/pr-209/docs-generator/theme/index.html
@@ -6,9 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Theme - FK Documentation generator</title><link
             rel="stylesheet"
-            href="../assets/docs-572a04.css"
+            href="../assets/docs-a3d210.css"
             crossorigin
-            integrity="sha384-Pwd5Ernh2cekVRAFkaa2rc9iAY2IlMP6aE12LQ+Wb1pAx9RR0vZfEUhnoJPMP8Tv"
+            integrity="sha384-YbeF7RcFfGT342qcvru++XOg5V9/m3n53O1UMUT6BqaCOYuVEdkVXEI5GuF6zTsy"
             
         />
         <link
@@ -221,9 +221,9 @@
 </div>
 <div class="toolbar__item">
     <span class="version">
-        feature/translate-docs (<a href="https://github.com/Forsakringskassan/docs-generator/commits/5620a01ce6d2f0707ba3c2cfcdb1a3a8649d0917">5620a01</a>)<br />
+        feature/translate-docs (<a href="https://github.com/Forsakringskassan/docs-generator/commits/525b7be8cc8df7e76151640a3b9718a51ebc04ba">525b7be</a>)<br />
         <a href="https://github.com/Forsakringskassan/docs-generator/pull/209">PR 209</a><br />
-        2025-04-20 10:38
+        2025-04-20 14:38
     </span>
 </div>
 </div>
@@ -307,6 +307,27 @@
 <td class="table__column table__column--text"><code>--docs-error-background</code></td>
 <td class="table__column table__column--text"><code class="preview-color" style="--current-value: var(--docs-error-background)">#fcf3f3</code></td>
 <td class="table__column table__column--text">Default warning background.</td>
+</tr>
+</tbody>
+</table>
+<h2 id="badge"><a class="header-anchor" href="#badge">Badge</a></h2><p class="docs-paragraph">Component badges</p><table class="table">
+<thead>
+<tr class="table__row">
+<th class="table__column table__column--text" scope="col">Variable</th>
+<th class="table__column table__column--text" scope="col">Default value</th>
+<th class="table__column table__column--text" scope="col">Description</th>
+</tr>
+</thead>
+<tbody>
+<tr class="table__row">
+<td class="table__column table__column--text"><code>--docs-badge-component-color</code></td>
+<td class="table__column table__column--text"><code class="preview-color" style="--current-value: var(--docs-badge-component-color)">var(--docs-text-color-default)</code></td>
+<td class="table__column table__column--text">Component badge text color</td>
+</tr>
+<tr class="table__row">
+<td class="table__column table__column--text"><code>--docs-badge-component-background</code></td>
+<td class="table__column table__column--text"><code class="preview-color" style="--current-value: var(--docs-badge-component-background)">#ddddde</code></td>
+<td class="table__column table__column--text">Component badge background color</td>
 </tr>
 </tbody>
 </table>
