--- a/pr-preview/pr-206/docs-generator/README-a4f94e.html
+++ b/pr-preview/pr-206/docs-generator/README-a4f94e.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="sv" class="layout--example" data-root-url=".">
+<html lang="en" class="layout--example" data-root-url=".">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +9,9 @@
         <!-- prettier-ignore -->
         <link
             rel="stylesheet"
-            href="./assets/docs-572a04.css"
+            href="./assets/docs-a3d210.css"
             crossorigin
-            integrity="sha384-Pwd5Ernh2cekVRAFkaa2rc9iAY2IlMP6aE12LQ+Wb1pAx9RR0vZfEUhnoJPMP8Tv"
+            integrity="sha384-YbeF7RcFfGT342qcvru++XOg5V9/m3n53O1UMUT6BqaCOYuVEdkVXEI5GuF6zTsy"
             
         />
         <link
